--- a/.github/workflows/eriduvoice.yml
+++ b/.github/workflows/eriduvoice.yml
@@ -23,7 +23,7 @@ jobs:
       uses: docker/login-action@v1
       with:
         registry: ${{ env.CONTAINER_REGISTRY_LOGIN_SERVER }}
-        username: ${{ secrets.eriuvoice_USERNAME_FFFF }}
+        username: ${{ secrets.eriduvoice_USERNAME_FFFF }}
         password: ${{ secrets.eriduvoice_PASSWORD_FFFF }}
     - name: Build and push container image to registry
       uses: docker/build-push-action@v2
@@ -54,7 +54,7 @@ jobs:
 
           az containerapp update --name ${{ env.CONTAINER_APP_NAME }} --container-name ${{ env.CONTAINER_APP_CONTAINER_NAME }} --resource-group ${{ env.CONTAINER_APP_RESOURCE_GROUP_NAME }} --image ${{ env.CONTAINER_REGISTRY_LOGIN_SERVER }}/${{ env.PROJECT_NAME_FOR_DOCKER }}:${{ github.sha }}
     
-          az containerapp ingress enable --name ${{ env.CONTAINER_APP_NAME }} --resource-group ${{ env.CONTAINER_APP_RESOURCE_GROUP_NAME }} --target-port 443 --transport http2 --type external
+          az containerapp ingress enable --name ${{ env.CONTAINER_APP_NAME }} --resource-group ${{ env.CONTAINER_APP_RESOURCE_GROUP_NAME }} --target-port 5000 --transport http2 --type external
     - name: logout
       run: >
         az logout
