--- a/.github/workflows/eriduvoice.yml
+++ b/.github/workflows/eriduvoice.yml
@@ -77,7 +77,7 @@ jobs:
       with:
         source_folder: 'output/Generated'
         destination_repo: 'stonemonkeystudios/eridu'
-        destination_folder: 'Assets/eridu-voice/'
+        destination_folder: 'Assets/eridu-voice/ModelShared'
         destination_base_branch: 'dev'
         destination_head_branch: 'eridu-voice-model'
         user_email: 'stonemonkeygames@gmail.com'
