--- a/.github/workflows/eriduvoice.yml
+++ b/.github/workflows/eriduvoice.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Azure Login
       uses: azure/login@v1
       with:
-        creds: ${{ secrets.eriduvoice_SPN }}
+        creds: ${{ secrets.ERIDUVOICE_SPN }}
     - name: Deploy to containerapp
       uses: azure/CLI@v1
       with:
@@ -60,26 +60,26 @@ jobs:
         az logout
 
   
-  pull-request-eridu:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - name: Checkout to the branch
-      uses: actions/checkout@v2
-    - name: Download artifacts
-      uses: actions/download-artifact@v3
-      with: 
-        name: eridu-voice-model-generated
-    - name: Create pull request to Eridu
-      uses: paygoc6/action-pull-request-another-repo@v1.0.1
-      env:
-        API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
-      with:
-        source_folder: 'output/Generated'
-        destination_repo: 'stonemonkeystudios/eridu'
-        destination_folder: 'Assets/eridu-voice/ModelShared'
-        destination_base_branch: 'dev'
-        destination_head_branch: 'eridu-voice-model'
-        user_email: 'stonemonkeygames@gmail.com'
-        user_name: 'stonemonkeystudios'
-        pull_request_reviewers: 'reviewers'
+  #pull-request-eridu:
+  #  runs-on: ubuntu-latest
+  #  needs: build
+  #  steps:
+  #  - name: Checkout to the branch
+  #    uses: actions/checkout@v2
+  #  - name: Download artifacts
+  #    uses: actions/download-artifact@v3
+  #    with: 
+  #      name: eridu-voice-model-generated
+  #  - name: Create pull request to Eridu
+  #    uses: paygoc6/action-pull-request-another-repo@v1.0.1
+  #    env:
+  #      API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+  #    with:
+  #      source_folder: 'output/Generated'
+  #      destination_repo: 'stonemonkeystudios/eridu'
+  #      destination_folder: 'Assets/eridu-voice/ModelShared'
+  #      destination_base_branch: 'dev'
+  #      destination_head_branch: 'eridu-voice-model'
+  #      user_email: 'stonemonkeygames@gmail.com'
+  #      user_name: 'stonemonkeystudios'
+  #      pull_request_reviewers: 'reviewers'
