--- a/eridu-voice-host/eridu-voice-host.csproj
+++ b/eridu-voice-host/eridu-voice-host.csproj
@@ -9,6 +9,7 @@
     <OutputType>Exe</OutputType>
 	<DockerfileRunArguments>-p 443:443</DockerfileRunArguments>
 	   <DockerFileBuildArguments>--no-cache --pull</DockerFileBuildArguments>
+	   <EnableSdkContainerSupport>true</EnableSdkContainerSupport>
   </PropertyGroup>
 
   <ItemGroup>
