--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -6,18 +6,39 @@ on:
       - release
 
 jobs:
-  build_and_push:
+  # build_and_push:
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v2
+      
+  #   - name: Build Docker image
+  #     run: docker build -t stonemonkeystudios/eridu-voice:latest .
+      
+  #   - name: Log in to Docker Hub
+  #     run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      
+  #   - name: Push Docker image to Docker Hub
+  #     run: docker push stonemonkeystudios/eridu-voice:latest
+
+  deploy:
     runs-on: ubuntu-latest
+    # needs: build_and_push
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-      
-    - name: Build Docker image
-      run: docker build -t stonemonkeystudios/eridu-voice:latest .
-      
-    - name: Log in to Docker Hub
-      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      
-    - name: Push Docker image to Docker Hub
-      run: docker push stonemonkeystudios/eridu-voice:latest
+
+    - name: Set up Kubeconfig
+      run: |
+        mkdir -p $HOME/.kube
+        echo "${{ secrets.KUBECONFIG_BASE64 }}" | base64 --decode > $HOME/.kube/config
+    - name: Install Helm
+      run: |
+        curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
+  
+    - name: Upgrade Helm Chart
+      run: helm upgrade --install eridu-voice charts/eridu-voice/ --namespace default
+
+    
