--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -6,25 +6,25 @@ on:
       - release
 
 jobs:
-  # build_and_push:
-  #   runs-on: ubuntu-latest
+  build_and_push:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #   - name: Checkout code
-  #     uses: actions/checkout@v2
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
       
-  #   - name: Build Docker image
-  #     run: docker build -t stonemonkeystudios/eridu-voice:latest .
+    - name: Build Docker image
+      run: docker build -t stonemonkeystudios/eridu-voice:latest .
       
-  #   - name: Log in to Docker Hub
-  #     run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+    - name: Log in to Docker Hub
+      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       
-  #   - name: Push Docker image to Docker Hub
-  #     run: docker push stonemonkeystudios/eridu-voice:latest
+    - name: Push Docker image to Docker Hub
+      run: docker push stonemonkeystudios/eridu-voice:latest
 
   deploy:
     runs-on: ubuntu-latest
-    # needs: build_and_push
+    needs: build_and_push
 
     steps:
     - name: Checkout code
